Bring tooltip to front on Show()

This code was erroneously removed as spurious in a previous patch to
fix font sizing on DPI-scaled displays.

It's back now.

Bug: 920913
Change-Id: Ica0cd4e98ca2227566becc41a2620e771bd06775
Reviewed-on: https://chromium-review.googlesource.com/c/1408042
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622570}
Former-commit-id: 65deacdec80d85b0114e3b905b7ed303bba71d8a