ui/views/corewm/tooltip_win.cc
@@ -159,6 +159,10 @@ void TooltipWin::Show() {
 
   SendMessage(tooltip_hwnd_, TTM_TRACKACTIVATE,
               TRUE, reinterpret_cast<LPARAM>(&toolinfo_));
+
+  // Bring the window to the front.
+  SetWindowPos(tooltip_hwnd_, HWND_TOPMOST, 0, 0, 0, 0,
+               SWP_NOACTIVATE | SWP_NOMOVE | SWP_NOOWNERZORDER | SWP_NOSIZE);
 }
 
 void TooltipWin::Hide() {
